--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "webpack": "^5.89.0",
         "webpack-bundle-analyzer": "^4.9.1",
         "webpack-cli": "5.1.4",
-        "adm-zip": "^0.5.9"
+        "adm-zip": "0.5.9"
     },
     "webpm": {
         "dependencies": {
