--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "declaration": true,
         "downlevelIteration": true,
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "importHelpers": true,
         "target": "es2020",
         "esModuleInterop": true,
