--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@w3nest/http-clients",
     "description": "HTTP clients for the w3nest ecosystem.",
-    "version": "0.1.8-wip",
+    "version": "0.1.8",
     "author": "reinisch.gui@gmail.com",
     "homepage": "https://github.com/w3nest/http-clients#README.md",
     "main": "./dist/@w3nest/http-clients.js",
