--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,12 @@
         "target": "es2020",
         "esModuleInterop": true,
         "preserveConstEnums": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
         "lib": ["es5", "es6", "dom", "es2020"],
         "typeRoots": ["./node_modules/@types"],
         "paths": {
             "@rxVDomConfig": ["./rx-vdom.config"]
         },
+        "resolveJsonModule": true,
         "strictNullChecks": true
     },
     "ts-node": {
