--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@w3nest/http-clients",
     "description": "HTTP clients for the w3nest ecosystem.",
-    "version": "0.1.10-wip",
+    "version": "0.1.10",
     "author": "reinisch.gui@gmail.com",
+    "license": "MIT",
     "homepage": "https://github.com/w3nest/http-clients#README.md",
     "main": "./dist/@w3nest/http-clients.js",
     "files": [
